trading.log
  File "/home/runner/work/arkana/arkana/main.py", line 279
    df = get_stock_data(ticker: str)
                              ^
SyntaxError: invalid syntax
